Ændret fyldetekst til mumletekst

--- a/Index.html
+++ b/Index.html
@@ -56,7 +56,7 @@
                 <article>
                     <div class="fill-image"></div>
                     <h2>Fyldetekst</h2>
-                    <p>Fyldetekst som fylder et par mange lange linjer så vi kan se hvordan vores cards kommer til at se ud</p>
+                    <p>Hej hej hej hej hej hej hej</p>
                     <div class="button">Læs mere</div>
                 </article>
             </section>
