Videre arbejde - Nu er alle undersiders grundstruktur på plads. Lavet logo i header og andre småting

--- a/nytmedlem.html
+++ b/nytmedlem.html
@@ -9,6 +9,10 @@
   <body>
     <header>
       <div class="navbar-mobile">
+        <div class="logo">
+          <a href="./index.html">
+            <img src="./assets/img/RoldSkovOK.png" alt="Logo">
+          </a>
         <div class="menu_toggle">
           <input type="checkbox" />
           <span></span>
@@ -19,16 +23,22 @@
             <li class="active"><a href="./nytmedlem.html">Nyt Medlem</a></li>
             <li><a href="./klubhaandbog.html">Klubhåndbog</a></li>
             <li><a href="./aktiviteter.html">Aktiviteter</a></li>
+            <li><a href="./praktiskinfo.html">Praktisk Info</a></li>
             <li><a href="./medlemsside.html">Medlemsside</a></li>
           </ul>
         </div>
       </div>
       <div class="navbar-desktop" hidden>
+        <div class="logo">
+          <a href="./index.html">
+            <img src="./assets/img/RoldSkovOK.png" alt="Logo">
+          </a>
         <ul class="menu-desktop">
           <li><a href="./index.html">Hjem</a></li>
           <li class="active"><a href="./nytmedlem.html">Nyt Medlem</a></li>
           <li><a href="./klubhaandbog.html">Klubhåndbog</a></li>
           <li><a href="./aktiviteter.html">Aktiviteter</a></li>
+          <li><a href="./praktiskinfo.html">Praktisk Info</a></li>
           <li><a href="./medlemsside.html">Medlemsside</a></li>
         </ul>
       </div>
