--- a/medlemsside.html
+++ b/medlemsside.html
@@ -8,9 +8,13 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-<body id="medlemsside">
+<body>
     <header>
         <div class="navbar-mobile">
+            <div class="logo">
+                <a href="./index.html">
+                    <img src="./assets/img/RoldSkovOK.png" alt="Logo">
+                </a>
             <div class="menu_toggle">
                 <input type="checkbox" />
                 <span></span>
@@ -21,29 +25,35 @@
                     <li><a href="./nytmedlem.html">Nyt Medlem</a></li>
                     <li><a href="./klubhaandbog.html">Klubhåndbog</a></li>
                     <li><a href="./aktiviteter.html">Aktiviteter</a></li>
+                    <li><a href="./praktiskinfo.html">Praktisk Info</a></li>
                     <li class="active"><a href="./medlemsside.html">Medlemsside</a></li>
                 </ul>
             </div>
         </div>
         <div class="navbar-desktop" hidden>
+            <div class="logo">
+                <a href="./index.html">
+                    <img src="./assets/img/RoldSkovOK.png" alt="Logo">
+                </a>
             <ul class="menu-desktop">
                 <li><a href="./index.html">Hjem</a></li>
                 <li><a href="./nytmedlem.html">Nyt Medlem</a></li>
                 <li><a href="./klubhaandbog.html">Klubhåndbog</a></li>
                 <li><a href="./aktiviteter.html">Aktiviteter</a></li>
+                <li><a href="./praktiskinfo.html">Praktisk Info</a></li>
                 <li class="active"><a href="./medlemsside.html">Medlemsside</a></li>
             </ul>
         </div>
     </header>
-    <main>
+    <main id="medlemsside">
         <div class="login-box">
         <h1>Log ind på din profil</h1>
             
             <form>
-                <label for="brugernavn">Brugernavn</label>
-                <input type="tekst" id="brugernavn" placeholder="Indtast brugernavn">
-                <label for="password">Adgangskode</label>
-                <input type="password" id="password" placeholder="Indtast adgangskode">
+                <label for="medlemsnummer">Medlemsnummer</label>
+                <input type="tekst" id="medlemsnummer" placeholder="Indtast medlemsnummer">
+                <label for="adgangskode">Adgangskode</label>
+                <input type="adgangskode" id="adgangskode" placeholder="Indtast adgangskode">
                 <div class="login-button">Log ind</div>
             </form>
         </div>
