Skrev html og en masse sej css

--- a/aktiviteter.html
+++ b/aktiviteter.html
@@ -15,8 +15,9 @@
                 <a href="./index.html">
                     <img src="./assets/img/RoldSkovOK.png" alt="Logo">
                 </a>
+            </div>
             <div class="menu_toggle">
-                <input type="checkbox" />
+                <input type="checkbox"/>
                 <span></span>
                 <span></span>
                 <span></span>
@@ -35,6 +36,7 @@
                 <a href="./index.html">
                     <img src="./assets/img/RoldSkovOK.png" alt="Logo">
                 </a>
+            </div>
             <ul class="menu-desktop">
                 <li><a href="./index.html">Hjem</a></li>
                 <li><a href="./nytmedlem.html">Nyt Medlem</a></li>
@@ -47,6 +49,7 @@
     </header>
 
     <div class="hero-aktiviteter"></div>
+    <div id="middag"></div>
     <h1>Aktiviteter</h1>
     <h2>Fællesmiddag i RSOK</h2>
     <p>Hver tirsdag afsluttes klubbens træning med en fællesmiddag, der samler medlemmerne om et godt måltid og hyggeligt
