--- a/klubhaandbog.html
+++ b/klubhaandbog.html
@@ -15,13 +15,14 @@
                 <a href="./index.html">
                     <img src="./assets/img/RoldSkovOK.png" alt="Logo">
                 </a>
+            </div>
             <div class="menu_toggle">
                 <input type="checkbox" />
                 <span></span>
                 <span></span>
                 <span></span>
                 <ul class="menu">
-                    <li></li><a href="./index.html">Hjem</a></li>
+                    <li><a href="./index.html">Hjem</a></li>
                     <li><a href="./nytmedlem.html">Nyt Medlem</a></li>
                     <li class="active"><a href="./klubhaandbog.html">Klubhåndbog</a></li>
                     <li><a href="./aktiviteter.html">Aktiviteter</a></li>
@@ -35,6 +36,7 @@
                 <a href="./index.html">
                     <img src="./assets/img/RoldSkovOK.png" alt="Logo">
                 </a>
+            </div>
             <ul class="menu-desktop">
                 <li><a href="./index.html">Hjem</a></li>
                 <li><a href="./nytmedlem.html">Nyt Medlem</a></li>
@@ -51,14 +53,15 @@
 </div>
 <!-- Er i tvivl om vi skal give disse en class - vil dog ikke give dem cards og article, da vi også bruger det på index -->
 <h1>Klubhåndbog</h1>
-
+<article>
 <div class="fill-image"></div>
 <h2>O-løb - en sport for alle!</h2>
 <p>Orienteringsløb er meget mere end en sport – det er en unik oplevelse i naturen, der kombinerer fysisk aktivitet med et mentalt aspekt. Derfor kalder vi det også “for hjerte og hjerne”! Det handler om at finde vej til poster i terrænet ved hjælp af et orienteringskort og et kompas, alt imens du nyder naturen og dens skiftende landskaber.
 
 O-løb er en sport for alle. Alle kan deltage på deres eget niveau – som barn eller voksen, individuelt eller sammen med andre. Her ligger den store fordel i, at hele familien kan "gå til det samme" og samtidig få oplevelser tilpasset alder, lyst og behov. Når børnene er små, skaber det fælles minder, mens teenagere og voksne kan dyrke sporten mere
 selvstændigt. I RSOK møder du alle aldre, samlet om glæden ved at finde poster med kort og kompas, både på hygge- og konkurrence niveau.</p>
-
+</article>
+<article>
 <div class="fill-image"></div>
 <h2>O-kort - dit værktøj til skoven</h2>
 <p>Orienteringskort – o-kort – er noget helt særligt. De er blandt verdens bedste, med en detaljerigdom og logik, der gør
@@ -71,7 +74,8 @@ dem nemme at bruge, når du skal finde poster på banen. Kortene er tegnet af er
 </ul>
 <p>Kortene er designet til at give dig de nødvendige oplysninger for at navigere hurtigt og sikkert i terrænet, uden overflødig information. Vi opdaterer løbende vores o-kort, så de altid er præcise og tilpasset områdets udvikling. RSOK har kort over store dele af Rold Skov, mindre private skove og offentlige parker, samt byområder som Skørping, Støvring
 og Terndrup, hvilket giver mulighed for både klassisk skovløb og by-orientering.</p>
-
+</article>
+<article>
 <div class="fill-image"></div>
 <h2>Klubbens historie - fra modstandskamp til moderne forening</h2>
 <p>Rold Skov Orienteringsklub (RSOK) blev stiftet i vinteren 1942 og har siden haft en lang og spændende historie, præget af både udfordringer og succeser. I klubbens tidlige år var aktiviteterne præget af vinterdiscipliner som skiløb og skøjteløb. Samtidig spillede klubben en uventet rolle under Anden Verdenskrig, hvor flere af stifterne var aktive i
@@ -83,7 +87,8 @@ Med Rold Skov som omdrejningspunkt har klubben altid haft unikke muligheder for 
 kort og nye ruter. <br>
 
 RSOK er ikke kun en klub med en stolt historie, men også et fællesskab, der favner traditioner og nye idéer. Uanset om du er nybegynder eller erfaren orienteringsløber, er du velkommen til at blive en del af vores klub.</p>
-
+</article>
+<article>
 <div class="fill-image"></div>
 <h2>Tirsdagstræning - sjov, udfordring og sammenhold</h2>
 <p>Hver tirsdag kl. 16:45 forvandles skoven til et livligt træningsunivers, hvor børn, unge og voksne samles for at tage
@@ -97,10 +102,13 @@ junior, der søger tekniske og fysiske udfordringer – vi har plads til dig! Vo
 alle aldre og niveauer, så du kan udvikle dig i dit eget tempo.<br> Vores tirsdagstræninger er en fantastisk mulighed for at løbe en bane,
 finpudse teknikken og opleve glæden ved orientering sammen med andre.
 Kom og vær en del af vores dynamiske fællesskab – vi glæder os til at se dig i skoven!</p>
-
+</article>
+<article>
 <div class="fill-image"></div>
 <h2>RSOK'kerne - Vores hyggelige seniorafdeling</h2>
 <p>RSOK’kerne er hjertet i vores seniorafdeling, hvor vi mødes den første mandag i hver måned (undtagen juli og august) fra
 kl. 10:00 til 13:00 for at nyde en fælles gåtur. Oftest udforsker vi de smukke omgivelser i Rold Skov, hvor vores erfarne medlemmer ofte deler fascinerende historier undervejs.<br> Men vores eventyr stopper ikke der – vi har også besøgt Aalborg for at opleve de imponerende gavlmalerier, udforsket Klosteret og nydt en afslappende kanotur på Lindenborg Å.På turene nyder vi vores medbragte madpakker i godt selskab.<br> Er du medlem af klubben? Så er du mere end velkommen til at deltage – helt gratis! Vi lover dig nogle uforglemmelige timer fyldt med naturoplevelser, fællesskab og en god portion røverhistorier.</p>
+</article>
 </main>
+<footer>fødder</footer>
 </body>
