--- a/medlemsside.html
+++ b/medlemsside.html
@@ -15,6 +15,7 @@
                 <a href="./index.html">
                     <img src="./assets/img/RoldSkovOK.png" alt="Logo">
                 </a>
+            </div>
             <div class="menu_toggle">
                 <input type="checkbox" />
                 <span></span>
@@ -35,6 +36,7 @@
                 <a href="./index.html">
                     <img src="./assets/img/RoldSkovOK.png" alt="Logo">
                 </a>
+            </div>
             <ul class="menu-desktop">
                 <li><a href="./index.html">Hjem</a></li>
                 <li><a href="./nytmedlem.html">Nyt Medlem</a></li>
