--- a/nytmedlem.html
+++ b/nytmedlem.html
@@ -13,6 +13,7 @@
           <a href="./index.html">
             <img src="./assets/img/RoldSkovOK.png" alt="Logo">
           </a>
+          </div>
         <div class="menu_toggle">
           <input type="checkbox" />
           <span></span>
@@ -33,6 +34,7 @@
           <a href="./index.html">
             <img src="./assets/img/RoldSkovOK.png" alt="Logo">
           </a>
+          </div>
         <ul class="menu-desktop">
           <li><a href="./index.html">Hjem</a></li>
           <li class="active"><a href="./nytmedlem.html">Nyt Medlem</a></li>
@@ -46,6 +48,8 @@
 
     <div class="hero-nytmedlem"></div>
     <h1>Nyt Medlem</h1>
+    <section>
+      <article>
     <h2>Prøveperiode</h2>
     <p>
       Vi tilbyder en gratis prøveperiode på op til 3 mdr. (enten et forårs-
@@ -54,7 +58,9 @@
       orienteringssporten er noget for dig. Eneste udgift vil være 20 kr. pr.
       kort til de 4 områder i Rold Skov, som dækker klubbens løbsområder.
     </p>
-    <h2>Udstyr</h2>
+    </article>
+      <article>
+      <h2>Udstyr</h2>
     <p>
       Som udgangspunkt kræver det blot fornuftigt fodtøj og tøj, man kan bevæge
       sig i, og som må blive vådt, hvis vejret driller lidt. Vi har altid et
@@ -62,6 +68,9 @@
       Specielt og praktisk løbetøj og orienteringssko kan altid komme senere –
       og måske endda en fin jakke i klubbens karakteristiske farver.
     </p>
+    </article>
+
+    <article>
     <h2>Niveau</h2>
     <p>
       Orienteringsløb er opdelt i sværhedsgrader og længder, afpasset efter hvor
@@ -71,6 +80,8 @@
       i forårs- og efterårshalvårene. Det er hver gang fire baner at vælge
       imellem. Fra 2 km let til 8 km svær målt i fugleflugt.
     </p>
+</article>
+<article>
     <h2>Priser</h2>
     <p>
       Årligt kontingent 500kr <br />
@@ -79,7 +90,9 @@
       alle vores træninger og konkurrencer. <br />
       Vi ser frem til at byde dig velkommen i vores fælleskab!
     </p>
-
     <div class="button">Meld dig ind her</div>
+  </article>
+    </section>
+    <footer>fødder</footer>
   </body>
 </html>
