Updated html and css

--- a/aktiviteter.html
+++ b/aktiviteter.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+            integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -47,29 +50,66 @@
             </ul>
         </div>
     </header>
-
-    <div class="hero-aktiviteter"></div>
-    <div id="middag"></div>
+<main>
+    <div class="Headings">
     <h1>Aktiviteter</h1>
+    </div>
+    <div class="hero-aktiviteter"></div>
+
+    <div id="middag"></div>
+    <section>
+        <article>
     <h2>Fællesmiddag i RSOK</h2>
     <p>Hver tirsdag afsluttes klubbens træning med en fællesmiddag, der samler medlemmerne om et godt måltid og hyggeligt
     samvær. Efter dagens orienteringsaktiviteter er middagen en oplagt mulighed for at dele oplevelser fra skoven, lære nye
     ansigter at kende og styrke båndene i klubben. Fællesmiddagen er en værdsat tradition, der skaber en varm og
     inkluderende atmosfære, hvor alle føler sig som en del af fællesskabet.</p>
+    </article>
+    <article>
     <h2>RSOK til Midsommer Lounge</h2>
     <p>Skørping Midsommer Lounge er et socialt event, der fylder parken ved Privathospitalet med glade mennesker, afslappet
     lounge-stemning og chill-out musik. Gæsterne kan nyde lækker mad og drikke fra lokale erhvervsdrivende i hyggelige
     omgivelser. Rold Skov Orienteringsklub deltager med små aktiviteter, der giver en smagsprøve på orienteringsløb og
     muligheden for at møde klubben i en uformel atmosfære. Overskuddet fra arrangementets barsalg går til projektet Aktiv
     Center Rold Skov, der styrker fællesskabet i lokalområdet.</p>
+    </article>
+    <article>
     <h2>RSOK til byfest i Skørping</h2>
     <p>Rold Skov Orienteringsklub er en fast del af den årlige byfest i Skørping, hvor vi inviterer både børn og voksne til at
     prøve kræfter med orienteringsløb. Under "Aktiv Torsdag" tilbyder vi sjove og lærerige aktiviteter, hvor deltagerne kan
     få en introduktion til kort og kompas, mens de løser spændende baner i nærområdet. Byfesten er en fantastisk mulighed
     for at opleve glæden ved orienteringsløb, samtidig med at man nyder den livlige og festlige stemning i byen.</p>
+    </article>
+    <article>
     <h2>Bliv en del af fællesskabet</h2>
     <p>Rold Skov Orienteringsklub er mere end en klub – det er et sted, hvor natur, motion og fællesskab går hånd i hånd.
     Uanset om du møder os til byfesten i Skørping, nyder stemningen ved Midsommer Lounge, eller deler et måltid til vores
     fællesmiddag, er du altid velkommen til at blive en del af vores engagerede fællesskab. Vi glæder os til at introducere
     dig til orienteringsløbets mange glæder og dele uforglemmelige oplevelser i noget af Danmarks smukkeste natur. Kom og
     vær med – vi har plads til alle!</p>
+    </article>
+    </section>
+</main>
+
+        <footer>
+            <section class="NyttigLinks">
+                <h6>Nyttige Links</h6>
+                <a href="https://www.o-service.dk/" target="_blank">O-service.dk</a>
+                <a href="https://www.do-f.dk/" target="_blank">Dansk Orienteringsforbund</a>
+                <a href="https://www.orientering.dk" target="_blank">Information og disskution om O-løb</a>
+            </section>
+            <section class="NyttigKontakt">
+                <h6>Kontakt</h6>
+                <a href="mailto:support@roldskovok.dk">Support@roldskovok.dk</a>
+                <a href="mailto:bestyrelsen@roldskovok.dk">Bestyrelsen@roldskovok.dk</a>
+                <a href="mailto:kortsalg@roldskovok.dk">Kortsalg@roldskovok.dk</a>
+            </section>
+            <div class="SomeLinks">
+                <a href="https://www.facebook.com/RoldSkovOK/?ref=embed_page"><i class="fa-brands fa-square-facebook"></i></a>
+                <a href="https://www.instagram.com/roldskovorienteringsklub/"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+            <p class="Copyright">Copyright Rold Skov OK &copy; 2025</p>
+        </footer>
+
+    </body>
+</html>
