--- a/nytmedlem.html
+++ b/nytmedlem.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+          integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <header>
@@ -45,9 +48,11 @@
         </ul>
       </div>
     </header>
-
+<main>
+  <div class="Headings">
+  <h1>Nyt Medlem</h1>
+  </div>
     <div class="hero-nytmedlem"></div>
-    <h1>Nyt Medlem</h1>
     <section>
       <article>
     <h2>Prøveperiode</h2>
@@ -93,6 +98,27 @@
     <div class="button">Meld dig ind her</div>
   </article>
     </section>
-    <footer>fødder</footer>
-  </body>
+</main>
+
+        <footer>
+          <section class="NyttigLinks">
+            <h6>Nyttige Links</h6>
+            <a href="https://www.o-service.dk/" target="_blank">O-service.dk</a>
+            <a href="https://www.do-f.dk/" target="_blank">Dansk Orienteringsforbund</a>
+            <a href="https://www.orientering.dk" target="_blank">Information og disskution om O-løb</a>
+          </section>
+          <section class="NyttigKontakt">
+            <h6>Kontakt</h6>
+            <a href="mailto:support@roldskovok.dk">Support@roldskovok.dk</a>
+            <a href="mailto:bestyrelsen@roldskovok.dk">Bestyrelsen@roldskovok.dk</a>
+            <a href="mailto:kortsalg@roldskovok.dk">Kortsalg@roldskovok.dk</a>
+          </section>
+          <div class="SomeLinks">
+            <a href="https://www.facebook.com/RoldSkovOK/?ref=embed_page"><i class="fa-brands fa-square-facebook"></i></a>
+            <a href="https://www.instagram.com/roldskovorienteringsklub/"><i class="fa-brands fa-instagram"></i></a>
+          </div>
+          <p class="Copyright">Copyright Rold Skov OK &copy; 2025</p>
+        </footer>
+   
+      </body>
 </html>
