--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -46,10 +49,12 @@
         </div>
     </header>
         <main>
+            <div class="Headings">
+            <h1>Velkommen til <br>Rold Skov Orienteringsklub!</h1>
+            </div>
             <div class="hero-index">
 
             </div>
-                <h1>Velkommen til Rold Skov Orienteringsklub!</h1>
 
 
             <section class="cards">
@@ -63,7 +68,7 @@
                     Her ligger den store fordel i, at hele familien kan "gå til det samme" og samtidig
                     få oplevelser tilpasset
                     alder, lyst og behov.</p>
-                    <div class="button"><a href="./nytmedlem.html">Hør mere</a></div>
+                    <div class="button"><a href="./nytmedlem.html">Hør mere om sporten</a></div>
                 </article>
                 <article>
                     <div class="fill-image"></div>
@@ -75,22 +80,24 @@
                     Efter dagens orienteringsaktiviteter
                     er middagen en oplagt
                     mulighed for at...</p>
-                    <div class="button"><a href="./aktiviteter.html#middag">Se mere</a></div>
+                    <div class="button"><a href="./aktiviteter.html#middag">Læs videre</a></div>
                 </article>
                 <article>
                     <div class="fill-image"></div>
                     <h2>Nyheder</h2>
-                    <p>Så er alt klar til jer
+                    <p>Så er alt klar til jer. <br>
                     Posterne er i skoven hele ugen og kortene er klar på hjemmesiden og i kortkassen.
-                    
+                    <br>
                     Se flere nyheder på vores
-                    Facebook side</p>
-                    <div class="button"><a href="https://www.facebook.com/RoldSkovOK/?ref=embed_page" target="_blank">Læs mere</a></div>
+                    Facebook side.</p>
+                    <div class="button"><a href="https://www.facebook.com/RoldSkovOK/?ref=embed_page" target="_blank">Se flere nyheder</a></div>
                 </article>
             </section>
 
             <section>
                 <article>
+                    <!-- Tilføj knap og lav om til card i css
+                     Fører direkte til sektion om Historien i klubhåndbogen -->
                     <div class="fill-image"></div>
                     <h3>Klubbens Historie</h3>
                     <p>Rold Skov Orienteringsklub (RSOK) blev stiftet i vinteren 1942 og vi er stolte af at være en traditionsrig
@@ -132,6 +139,7 @@
 
         <section>
             <h4>Sponsor</h4>
+            <!-- Lav sponsor om til links der fører til deres respektive hjemmeside -->
             <div class="spons-wrap">
             <img src="./assets/img/Sponsor1.jpg" alt="friliv.dk Logo">
             <img src="./assets/img/Sponsor2.png" alt="Sparekassen Danmark Logo">
@@ -139,6 +147,25 @@
         </section>
         </main>
 
-        <footer>fødder</footer>
+        <footer>
+            <section class="NyttigLinks">
+                <h6>Nyttige Links</h6>
+                <a href="https://www.o-service.dk/" target="_blank">O-service.dk</a>
+                <a href="https://www.do-f.dk/" target="_blank">Dansk Orienteringsforbund</a>
+                <a href="https://www.orientering.dk" target="_blank">Information og disskution om O-løb</a>
+            </section>
+            <section class="NyttigKontakt">
+                <h6>Kontakt</h6>
+                <a href="mailto:support@roldskovok.dk">Support@roldskovok.dk</a>
+                <a href="mailto:bestyrelsen@roldskovok.dk">Bestyrelsen@roldskovok.dk</a>
+                <a href="mailto:kortsalg@roldskovok.dk">Kortsalg@roldskovok.dk</a>
+            </section>
+            <div class="SomeLinks">
+                <a href="https://www.facebook.com/RoldSkovOK/?ref=embed_page"><i class="fa-brands fa-square-facebook"></i></a>
+                <a href="https://www.instagram.com/roldskovorienteringsklub/"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+            <p class="Copyright">Copyright Rold Skov OK &copy; 2025</p>
+        </footer>
+<!-- O-service.dk, DOF, orientering.dk -->
 </body>
 </html>
