--- a/klubhaandbog.html
+++ b/klubhaandbog.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+            integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -48,11 +51,11 @@
         </div>
     </header>
     <main>
-<div class="hero-klubhaandbog">
-
-</div>
+        <div class="Headings">
+            <h1>Klubhåndbog</h1>
+            </div>
+<div class="hero-klubhaandbog"></div>
 <!-- Er i tvivl om vi skal give disse en class - vil dog ikke give dem cards og article, da vi også bruger det på index -->
-<h1>Klubhåndbog</h1>
 <article>
 <div class="fill-image"></div>
 <h2>O-løb - en sport for alle!</h2>
@@ -110,5 +113,23 @@ Kom og vær en del af vores dynamiske fællesskab – vi glæder os til at se di
 kl. 10:00 til 13:00 for at nyde en fælles gåtur. Oftest udforsker vi de smukke omgivelser i Rold Skov, hvor vores erfarne medlemmer ofte deler fascinerende historier undervejs.<br> Men vores eventyr stopper ikke der – vi har også besøgt Aalborg for at opleve de imponerende gavlmalerier, udforsket Klosteret og nydt en afslappende kanotur på Lindenborg Å.På turene nyder vi vores medbragte madpakker i godt selskab.<br> Er du medlem af klubben? Så er du mere end velkommen til at deltage – helt gratis! Vi lover dig nogle uforglemmelige timer fyldt med naturoplevelser, fællesskab og en god portion røverhistorier.</p>
 </article>
 </main>
-<footer>fødder</footer>
+        <footer>
+            <section class="NyttigLinks">
+                <h6>Nyttige Links</h6>
+                <a href="https://www.o-service.dk/" target="_blank">O-service.dk</a>
+                <a href="https://www.do-f.dk/" target="_blank">Dansk Orienteringsforbund</a>
+                <a href="https://www.orientering.dk" target="_blank">Information og disskution om O-løb</a>
+            </section>
+            <section class="NyttigKontakt">
+                <h6>Kontakt</h6>
+                <a href="mailto:support@roldskovok.dk">Support@roldskovok.dk</a>
+                <a href="mailto:bestyrelsen@roldskovok.dk">Bestyrelsen@roldskovok.dk</a>
+                <a href="mailto:kortsalg@roldskovok.dk">Kortsalg@roldskovok.dk</a>
+            </section>
+            <div class="SomeLinks">
+                <a href="https://www.facebook.com/RoldSkovOK/?ref=embed_page"><i class="fa-brands fa-square-facebook"></i></a>
+                <a href="https://www.instagram.com/roldskovorienteringsklub/"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+            <p class="Copyright">Copyright Rold Skov OK &copy; 2025</p>
+        </footer>
 </body>
