--- a/praktiskinfo.html
+++ b/praktiskinfo.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+            integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -48,10 +51,12 @@
         </div>
     </header>
     <main>
+        <div class="Headings">
+        <h1>Praktisk Info</h1>
+        </div>
         <div class="hero-praktiskinfo">
         
         </div>
-        <h1>Praktisk Info</h1>
     <section class="kontaktpersoner">
         <h2>Kontaktpersoner</h2>
         <div class="card-container">
@@ -97,6 +102,26 @@
             </div>
         </div>
     </section>
+</main>
 
-
-    </main></body>
+        <footer>
+            <section class="NyttigLinks">
+                <h6>Nyttige Links</h6>
+                <a href="https://www.o-service.dk/" target="_blank">O-service.dk</a>
+                <a href="https://www.do-f.dk/" target="_blank">Dansk Orienteringsforbund</a>
+                <a href="https://www.orientering.dk" target="_blank">Information og disskution om O-løb</a>
+            </section>
+            <section class="NyttigKontakt">
+                <h6>Kontakt</h6>
+                <a href="mailto:support@roldskovok.dk">Support@roldskovok.dk</a>
+                <a href="mailto:bestyrelsen@roldskovok.dk">Bestyrelsen@roldskovok.dk</a>
+                <a href="mailto:kortsalg@roldskovok.dk">Kortsalg@roldskovok.dk</a>
+            </section>
+            <div class="SomeLinks">
+                <a href="https://www.facebook.com/RoldSkovOK/?ref=embed_page"><i class="fa-brands fa-square-facebook"></i></a>
+                <a href="https://www.instagram.com/roldskovorienteringsklub/"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+            <p class="Copyright">Copyright Rold Skov OK &copy; 2025</p>
+        </footer>
+</body>
+</html>
