--- a/praktiskinfo.html
+++ b/praktiskinfo.html
@@ -123,5 +123,5 @@
             </div>
             <p class="Copyright">Copyright Rold Skov OK &copy; 2025</p>
         </footer>
-</body>
+</body> <p>test</p>
 </html>
