--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
                 </ul>
             </div>
         </div>
-    <div class="navbar-desktop" hidden>
+    <div class="navbar-hejhej" hidden>
             <div class="logo">
                 <a href="./index.html">
                     <img src="./assets/img/RoldSkovOK.png" alt="Logo">
