Added Praktisk info

--- a/praktiskinfo.html
+++ b/praktiskinfo.html
@@ -62,46 +62,95 @@
         <div class="card-container">
             <div class="card">
                 <img src="./assets/img/user-regular.svg" alt="Portræt af kontaktperson 1">
-                <h3>Navn 1</h3>
-                <p>Rolle 1</p>
+                <h3>Helge Søgaard</h3>
+                <p>Formand</p>
+                <p>+45 4061 5761</p>
+                <p><a href="mailto:">formanden@roldsovok.dk</a></p>
             </div>
             <div class="card">
                 <img src="./assets/img/user-regular.svg" alt="Portræt af kontaktperson 2">
-                <h3>Navn 2</h3>
-                <p>Rolle 2</p>
+                <h3>Helmut Hilden</h3>
+                <p>Næstformand</p>
+                <p>+45 2286 2537</p>
+                <p><a href="mailto:">helmuthilden@live.dk</a></p>
             </div>
             <div class="card">
                 <img src="./assets/img/user-regular.svg" alt="Portræt af kontaktperson 3">
-                <h3>Navn 3</h3>
-                <p>Rolle 3</p>
+                <h3>Michael Niss</h3>
+                <p>Kasserer og Support</p>
+                <p>+45 5190 5907</p>
+                <p><a href="mailto:">support@roldskovok.dk</a></p>
             </div>
             <div class="card">
                 <img src="./assets/img/user-regular.svg" alt="Portræt af kontaktperson 4">
-                <h3>Navn 4</h3>
-                <p>Rolle 4</p>
+                <h3>Marianne Brams</h3>
+                <p>RSOK'ker Koordinator</p>
+                <p>+45 6170 3980</p>
+                <p><a href="mailto:">fambramspc@gmail.com</a></p>
             </div>
             <div class="card">
                 <img src="./assets/img/user-regular.svg" alt="Portræt af kontaktperson 5">
-                <h3>Navn 5</h3>
-                <p>Rolle 5</p>
+                <h3>Laura Bobach</h3>
+                <p>Presse og Facebook</p>
+                <p>+45 2233 5302</p>
+                <p><a href="mailto:">laura@bobach.name</a></p>
             </div>
             <div class="card">
                 <img src="./assets/img/user-regular.svg" alt="Portræt af kontaktperson 6">
-                <h3>Navn 6</h3>
-                <p>Rolle 6</p>
+                <h3>Mette Rackham</h3>
+                <p>Økonomiudvalg</p>
+                <p>+45 2224 8324</p>
+                <p><a href="mailto:">minisyren@gmail.com</a></p>
             </div>
             <div class="card">
                 <img src="./assets/img/user-regular.svg" alt="Portræt af kontaktperson 7">
-                <h3>Navn 7</h3>
-                <p>Rolle 7</p>
+                <h3>Mette Byskov</h3>
+                <p>Børn og Unge udvalg</p>
+                <p>+45 2514 4003</p>
+                <p><a href="mailto:">Mette.byskov@live.dk</a></p>
             </div>
             <div class="card">
                 <img src="./assets/img/user-regular.svg" alt="Portræt af kontaktperson 8">
-                <h3>Navn 8</h3>
-                <p>Rolle 8</p>
+                <h3>Orla Vitting</h3>
+                <p>Materialemand</p>
+                <p>+45 4034 3335</p>
+                <p><a href="mailto:">aovitting@hotmail.com</a></p>
             </div>
         </div>
     </section>
+<section>
+    <article>
+        <h3>Klubhus</h3>
+        <p>Rold Skov Orienteringsklub (RSOK) har et klubhus, der er centralt placeret i Rold Skov, en af Danmarks største skove.
+        Klubben bruger dette klubhus som base for en række aktiviteter, herunder undervisning i orienteringskort (o-kort) og
+        orienteringsløb (o-løb).</p>
+        <p>Klubhuset er udstyret med faciliteter, der gør det muligt at afholde både teoretiske og praktiske træningssessioner. Der
+        er undervisningslokaler, hvor medlemmer kan lære at læse og forstå o-kort, samt områder til praktisk træning i skoven.
+        Klubben har også en samling af opdaterede o-kort over forskellige områder af Rold Skov og nærliggende områder, som
+        bruges til træning og konkurrencer.</p>
+        <p>Udover undervisning bruges klubhuset også til en række sociale og klubrelaterede aktiviteter. Medlemmerne mødes her til
+        fælles træning, planlægning af løb og sociale arrangementer. Det er et sted, hvor både nye og erfarne orienteringsløbere
+        kan mødes, dele erfaringer og dyrke deres fælles interesse for orienteringsløb.</p>
+    </article>
+</section>
+<section>
+    <article>
+        <h3>Transport</h3>
+        <p>Da vi hele tiden skifter startslokation, kan vi ikke give en fast beskrivelse af hvordan du kommer frem.<br>
+        Dog kan vi fortælle at toget holder næsten lige ude foran klubhusets hoveddøren, da der kun er 10 mins gågang mellem
+        station og klubhus.<br>
+        Klubhuset ligger på Mosevej 9, 9520 Skørping</p>
+    </article>
+</section>
+<section>
+    <article>
+        <h3>Parkering</h3>
+        <p>Der er rig mulighed for parkering ude foran klubhuset, men vi kan ikke love noget, når vi træner ved de andre
+        lokationer, dog råder vi jer til at holde ved de nærmeste offentlige p-pladser, som kan findes på Google Maps.</p>
+    </article>
+</section>
+
+    
 </main>
 
         <footer>
