Begyndt på M.querires

--- a/Index.html
+++ b/Index.html
@@ -62,25 +62,15 @@
                     <div class="fill-image"></div>
                     <h2>O-løb - en sport for alle</h2>
                     <p>O-løb er en sport for alle. Alle kan deltage på deres eget niveau – som barn eller voksen, individuelt eller sammen med
-                    andre.
-                    <br>
-                    <br>
-                    Her ligger den store fordel i, at hele familien kan "gå til det samme" og samtidig
-                    få oplevelser tilpasset
-                    alder, lyst og behov.</p>
-                    <div class="button"><a href="./nytmedlem.html">Hør mere om sporten</a></div>
+                    andre. Det er slet ikke så svært, som du måske tror!</p>
+                    <div class="button"><a href="./nytmedlem.html">Læs om sporten</a></div>
                 </article>
                 <article>
                     <div class="fill-image"></div>
                     <h2>Fællesmiddag</h2>
                     <p>Hver tirsdag afsluttes klubbens træning med en fællesmiddag, der samler medlemmerne om et godt måltid og hyggeligt
-                    samvær. <br>
-                    <br>
-                    
-                    Efter dagens orienteringsaktiviteter
-                    er middagen en oplagt
-                    mulighed for at...</p>
-                    <div class="button"><a href="./aktiviteter.html#middag">Læs videre</a></div>
+                    samvær.</p>
+                    <div class="button"><a href="./aktiviteter.html#middag">Læs mere</a></div>
                 </article>
                 <article>
                     <div class="fill-image"></div>
