Forsat på m.queries

--- a/Index.html
+++ b/Index.html
@@ -52,9 +52,7 @@
             <div class="Headings">
             <h1>Velkommen til <br>Rold Skov Orienteringsklub!</h1>
             </div>
-            <div class="hero-index">
-
-            </div>
+            <div class="hero-index"></div>
 
 
             <section class="cards">
@@ -93,6 +91,8 @@
                     <p>Rold Skov Orienteringsklub (RSOK) blev stiftet i vinteren 1942 og vi er stolte af at være en traditionsrig
                     orienteringsklub, der igennem 80 år har sat rammer for fællesskab, motion og kvalitetstid i noget af Danmarks smukkeste
                     natur.</p>
+                    <div class="button"><a href="klubhaandbog.html"_blank">Læs mere om klubbens historie</a>
+                    </div>
                 </article>
             </section>
 
