--- a/praktiskinfo.html
+++ b/praktiskinfo.html
@@ -34,7 +34,7 @@
                 </ul>
             </div>
         </div>
-        <div class="navbar-desktop" hidden>
+        <div class="navbar-desktop">
             <div class="logo-desktop">
                 <a href="./index.html">
                     <img src="./assets/img/RoldSkovOK.png" alt="Logo">
