Commit All code

--- a/Index.html
+++ b/Index.html
@@ -32,8 +32,8 @@
                 </ul>
             </div>
         </div>
-    <div class="navbar-desktop" hidden>
-            <div class="logo">
+    <div class="navbar-desktop">
+            <div class="logo-desktop">
                 <a href="./index.html">
                     <img src="./assets/img/RoldSkovOK.png" alt="Logo">
                 </a>
@@ -54,12 +54,12 @@
             </div>
             <div class="hero-index"></div>
 
-
+<div class="desktop-max-width">
             <section class="cards">
                 <article>
                     <div class="fill-image"></div>
                     <h2>O-løb - en sport for alle</h2>
-                    <p>O-løb er en sport for alle. Alle kan deltage på deres eget niveau – som barn eller voksen, individuelt eller sammen med
+                    <p>Alle kan deltage på deres eget niveau – som barn eller voksen, individuelt eller sammen med
                     andre. Det er slet ikke så svært, som du måske tror!</p>
                     <div class="button"><a href="./nytmedlem.html">Læs om sporten</a></div>
                 </article>
@@ -91,7 +91,7 @@
                     <p>Rold Skov Orienteringsklub (RSOK) blev stiftet i vinteren 1942 og vi er stolte af at være en traditionsrig
                     orienteringsklub, der igennem 80 år har sat rammer for fællesskab, motion og kvalitetstid i noget af Danmarks smukkeste
                     natur.</p>
-                    <div class="button"><a href="klubhaandbog.html"_blank">Læs mere om klubbens historie</a>
+                    <div class="button"><a href="klubhaandbog.html#historie">Læs mere om klubbens historie</a>
                     </div>
                 </article>
             </section>
@@ -113,6 +113,14 @@
                     selvfølgelig finde posterne på ens bane. Vi bruger kort og et kompas, men ikke GPS eller andre tekniske hjælpemidler
                     undervejs på banen – kun til at holde styr på tiden og måske se hvor man har været i skoven efter løbet.</p>
                 </article>
+                <article>
+                <h3>Skoven som legeplads</h3>
+                <p>Rold Skov Orienteringsklub har en unik fordel, som ingen andre klubber kan tilbyde – hele Rold Skov i vores baghave. <br>
+                Denne fantastiske naturperle danner rammen om vores aktiviteter og giver os ubegrænset adgang til et af Danmarks
+                smukkeste og mest varierede skovområder. Hvor det ofte kan være vanskeligt at få lov til at løbe i skove, har vores klub
+                etableret et stærkt samarbejde, der sikrer problemfri adgang til skoven. Rold Skov er vores helt særlige kendetegn. Her
+                får du ikke bare godt socialt samvær og god motion, men også en naturoplevelse, der er helt i særklasse.</p>
+            </article>
             </section>
 
         <div class="nyhedsbrev">
@@ -128,13 +136,14 @@
         </div>
 
         <section>
-            <h4>Sponsor</h4>
+            <h4>Sponsorer</h4>
             <!-- Lav sponsor om til links der fører til deres respektive hjemmeside -->
             <div class="spons-wrap">
-            <img src="./assets/img/Sponsor1.jpg" alt="friliv.dk Logo">
-            <img src="./assets/img/Sponsor2.png" alt="Sparekassen Danmark Logo">
+            <img src="./assets/img/Sponsor1.jpg" alt="friliv.dk Logo" loading="lazy">
+            <img src="./assets/img/Sponsor2.png" alt="Sparekassen Danmark Logo" loading="lazy">
             </div>
         </section>
+        </div>
         </main>
 
         <footer>
