--- a/klubhaandbog.html
+++ b/klubhaandbog.html
@@ -34,8 +34,8 @@
                 </ul>
             </div>
         </div>
-        <div class="navbar-desktop" hidden>
-            <div class="logo">
+        <div class="navbar-desktop">
+            <div class="logo-desktop">
                 <a href="./index.html">
                     <img src="./assets/img/RoldSkovOK.png" alt="Logo">
                 </a>
@@ -77,7 +77,7 @@ dem nemme at bruge, når du skal finde poster på banen. Kortene er tegnet af er
 <p>Kortene er designet til at give dig de nødvendige oplysninger for at navigere hurtigt og sikkert i terrænet, uden overflødig information. Vi opdaterer løbende vores o-kort, så de altid er præcise og tilpasset områdets udvikling. RSOK har kort over store dele af Rold Skov, mindre private skove og offentlige parker, samt byområder som Skørping, Støvring
 og Terndrup, hvilket giver mulighed for både klassisk skovløb og by-orientering.</p>
 </article>
-<article>
+<article id="historie">
 <div class="fill-image"></div>
 <h2>Klubbens historie - fra modstandskamp til moderne forening</h2>
 <p>Rold Skov Orienteringsklub (RSOK) blev stiftet i vinteren 1942 og har siden haft en lang og spændende historie, præget af både udfordringer og succeser. I klubbens tidlige år var aktiviteterne præget af vinterdiscipliner som skiløb og skøjteløb. Samtidig spillede klubben en uventet rolle under Anden Verdenskrig, hvor flere af stifterne var aktive i
