--- a/praktiskinfo.html
+++ b/praktiskinfo.html
@@ -57,8 +57,9 @@
         <div class="hero-praktiskinfo">
         
         </div>
-    <section class="kontaktpersoner">
+        <div class="desktop-max-width">
         <h2>Kontaktpersoner</h2>
+    <section class="kontaktpersoner">
         <div class="card-container">
             <div class="card">
                 <img src="./assets/img/user-regular.svg" alt="Portræt af kontaktperson 1">
@@ -149,7 +150,7 @@
         lokationer, dog råder vi jer til at holde ved de nærmeste offentlige p-pladser, som kan findes på Google Maps.</p>
     </article>
 </section>
-
+</div>
     
 </main>
 
