--- a/aktiviteter.html
+++ b/aktiviteter.html
@@ -34,8 +34,8 @@
                 </ul>
             </div>
         </div>
-        <div class="navbar-desktop" hidden>
-            <div class="logo">
+        <div class="navbar-desktop">
+            <div class="logo-desktop">
                 <a href="./index.html">
                     <img src="./assets/img/RoldSkovOK.png" alt="Logo">
                 </a>
