--- a/nytmedlem.html
+++ b/nytmedlem.html
@@ -32,8 +32,8 @@
           </ul>
         </div>
       </div>
-      <div class="navbar-desktop" hidden>
-        <div class="logo">
+      <div class="navbar-desktop">
+        <div class="logo-desktop">
           <a href="./index.html">
             <img src="./assets/img/RoldSkovOK.png" alt="Logo">
           </a>
