Made changes to Media Queries

--- a/aktiviteter.html
+++ b/aktiviteter.html
@@ -57,7 +57,8 @@
     <div class="hero-aktiviteter"></div>
 
     <div id="middag"></div>
-    <section>
+    <div class="desktop-max-width">
+    <section class="Fourgrid">
         <article>
     <h2>Fællesmiddag i RSOK</h2>
     <p>Hver tirsdag afsluttes klubbens træning med en fællesmiddag, der samler medlemmerne om et godt måltid og hyggeligt
@@ -89,6 +90,7 @@
     vær med – vi har plads til alle!</p>
     </article>
     </section>
+    </div>
 </main>
 
         <footer>
