--- a/klubhaandbog.html
+++ b/klubhaandbog.html
@@ -55,6 +55,7 @@
             <h1>Klubhåndbog</h1>
             </div>
 <div class="hero-klubhaandbog"></div>
+<div class="desktop-max-width">
 <article>
 <div class="fill-image"></div>
 <h2>O-løb - en sport for alle!</h2>
@@ -111,6 +112,7 @@ Kom og vær en del af vores dynamiske fællesskab – vi glæder os til at se di
 <p>RSOK’kerne er hjertet i vores seniorafdeling, hvor vi mødes den første mandag i hver måned (undtagen juli og august) fra
 kl. 10:00 til 13:00 for at nyde en fælles gåtur. Oftest udforsker vi de smukke omgivelser i Rold Skov, hvor vores erfarne medlemmer ofte deler fascinerende historier undervejs.<br> Men vores eventyr stopper ikke der – vi har også besøgt Aalborg for at opleve de imponerende gavlmalerier, udforsket Klosteret og nydt en afslappende kanotur på Lindenborg Å.På turene nyder vi vores medbragte madpakker i godt selskab.<br> Er du medlem af klubben? Så er du mere end velkommen til at deltage – helt gratis! Vi lover dig nogle uforglemmelige timer fyldt med naturoplevelser, fællesskab og en god portion røverhistorier.</p>
 </article>
+</div>
 </main>
         <footer>
             <section class="NyttigLinks">
