--- a/nytmedlem.html
+++ b/nytmedlem.html
@@ -53,7 +53,9 @@
   <h1>Nyt Medlem</h1>
   </div>
     <div class="hero-nytmedlem"></div>
-    <section>
+
+    <div class="desktop-max-width">
+    <section class="Fourgrid">
       <article>
     <h2>Prøveperiode</h2>
     <p>
@@ -98,6 +100,7 @@
     <div class="button">Meld dig ind her</div>
   </article>
     </section>
+    </div>
 </main>
 
         <footer>
